# ChangeLog for games-sports/dustrac
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-sports/dustrac/ChangeLog,v 1.3 2014/07/25 11:52:24 hasufell Exp $

*dustrac-1.7.1 (25 Jul 2014)

  25 Jul 2014; Julian Ospald <hasufell@gentoo.org> +dustrac-1.7.1.ebuild:
  version bump

*dustrac-1.6.3 (26 Jan 2014)

  26 Jan 2014; Julian Ospald <hasufell@gentoo.org> +dustrac-1.6.3.ebuild,
  +files/dustrac-1.6.3-cmake.patch, +files/dustrac-1.6.3-desktopfile.patch:
  version bump

*dustrac-1.6.2 (26 Dec 2013)

  26 Dec 2013; Julian Ospald <hasufell@gentoo.org> +dustrac-1.6.2.ebuild,
  +files/dustrac-1.6.2-cmake.patch, +files/dustrac-1.6.2-desktopfile.patch,
  +metadata.xml:
  initial import