@@ -8,27 +8,29 @@ AUX dustrac-1.6.3-desktopfile.patch 1039 SHA256 1629ff528295d4bceda2927cb0686b5c
 DIST dustrac-1.6.2.tar.gz 21623207 SHA256 21949f179d39b8d3dd98323105b321ccbe406cbad24e3ec970719236d4a78bc5 SHA512 c04f227ed95f6fca7014e3d2ad8f2b40801f02e4aef83e6435b01d95965da3f0f6326fe889ab5d1621131c7c5d0f2135231f280daa3559a291570015ec10ce1a WHIRLPOOL 366d97e349f7990e0b8343b360d9589f90ebe87db201b378b506f6c8a73567f36c67a09a51ecc1fbeabda83bc839467e77751ef7fc0147c4c9fbeefe592e3eac
 DIST dustrac-1.6.3.tar.gz 21625967 SHA256 caccf1a80e674a762d33cba68f8e125d478b0dd270549a6aeb86f91bd3c3e7ee SHA512 634ae5bf4d1978afd4442bcb25eef081fe8d72fcf2d57a6dac2325e41a4704014c96c87a395660bf50d06c1033144aab3a233856d51d5ea01ee092147323b7d8 WHIRLPOOL 9a2bd3871f4b83c05cb7df007ec7c2681f48b2a89d2f06a05779ae4e8c72237239e2d91939b40809d21294e5b762551b82986bcf798f3f20f0eab6d6bbdc8e64
 DIST dustrac-1.7.1.tar.gz 25622598 SHA256 a22412e437a5ecdb7bdbe094d8bab51a33a60fb55d37248bebd52f62b64e42e7 SHA512 5e2a77128a3f15610709c4d42bb4a33f3cf88e6688c9cbed8fdb6dd9bea433838d411876de1907851ce80a62089fbbfb3ca5d5bb44b22a7960b750fb13aacd4c WHIRLPOOL fb1c6f002b234a7513849495e569a268062dd80b0b6d8693ae75cd276fde1eee6e49eaf62be12f27197e008b04c3349a7c9b2415772b35a3a4a412c0150ee0f7
+DIST dustrac-1.7.2.tar.gz 25825142 SHA256 368b03d1264e336d6dd6e84a1b60d9a149711cd08d93938bf059acc5ef15af7f SHA512 60fafec447cf7b68dfd67fc68a5f92a62d3a4ff553e03f1f685ecad251a47995a4cf84ef6ffa9dd821601f432a07999d3b8b97bb73f6861100846d6238003acd WHIRLPOOL f49dea4072b389e403392d2479d23118c4e6617b40858a57d21ac321c883d595625f385b64ae888db32afe04e2605ca05799bda58e3f810f4c652216aa7f19f9
 EBUILD dustrac-1.6.2.ebuild 1242 SHA256 2f747ddcdc3610c6730200b933b57016c246c529dc2d9bd8fd4328e516c1d270 SHA512 3e91fe1caa3d40d1204d45ca4bf3d8faebf3fa105992a7269069061b303510f13b94dc3e417ff531acb6ada1eb69e9f0e6c6b959e9e7ab8f755550d5174b6fc6 WHIRLPOOL d40dc7aba1b72c184882f91182fd5d11f8da13b7d38799c3943c931a358e2d3d1203599eaf3880b782a11a8581e6cea0130a3ee4815e63a25241345021dbef57
 EBUILD dustrac-1.6.3.ebuild 1296 SHA256 6452ad2228b1f6542050acc1d18db452387d7baa3d41593cb5a6f270bbf2b1a9 SHA512 b175f4b695b839499ee224c0d155cc7c2bb899ae3d562e8d1628eeff86f3f1302afb4ffb69873c59b21a289ed17bec8affe543b344145fa536fe9babc5eb588d WHIRLPOOL 98e74725e9a522da85461e417e794baf00b754817ec850c3ba45b61ebbc6d22f13350fcb1ed05977fac996780beee5ea891d29c4d8aae819ec479c5d480fea90
 EBUILD dustrac-1.7.1.ebuild 1310 SHA256 e4df698adcad94b9c026690a7fd1ed4a53d070bb2d86c6b6bd0d23c7de27df27 SHA512 072ea7d35bff36ccd4a69797870b6d5e5ad95b7e5bd834679dc50cc6c889c4151328c6bd4dd1f065a7d11cb18c592d6fdd21d1f7097aa61c3ad2707c4ef99e74 WHIRLPOOL 2652af6b4af436018feaa2c02c40ab4bc77fbd4cd1edc54b7317f2a0b10ffe2d9e826c10c653d4e53a3103c7ac4b6286c1ba3c338521f0ac3810c5b7d2a90183
-MISC ChangeLog 745 SHA256 15a66c1964c1d4df04581a5122650c7b9ff1342ce317580f1f1c1217393f2d7c SHA512 da16501131127c8d56ec9f6946a14ce0201b18fd78cdc8aef3bd89acae000692b051d00bbb4603f0f9604bdc2d2f10619469fa5e0738df15f5a887cf33b52fb5 WHIRLPOOL f2a18f837df523201bbda4d22554102c7b125c1119c025f41732426083497e2d93e6abfb47f0b945e62ebcfa344f057f4ee848701a7342fcd68c2395dcdca17a
+EBUILD dustrac-1.7.2.ebuild 1310 SHA256 3239df7115ea22314d92ea16d1c81485c626a907b4c8a1ae55d70b4337898938 SHA512 c7d194ae9278a0a3d420fe7f66c58113fcb5a7675d8c2c4ca4e065aac857a8c38e9e0954fd9683b1b59a4e5c3d5f5008e80880019d237851cc27e961e7517a3d WHIRLPOOL 3fae9dbf0cbd55f65220dcfb02f871aec80229b3600e96ca4863eadc4908ad3fd205441570177438264910661a16ec013963b6f1d76edb256716a9a3fc4926e7
+MISC ChangeLog 865 SHA256 3e97f86c8e65b4188ada224a5832935489cd29fabe989cd9b433ab2f272c7372 SHA512 36f43ecd3e596d001be27a82ef178a38f04b973269d8932cdb6153555ee5177cef821c3eb1906fd4576f150f482d3358a3be7a23825a3f61fca59c0e81dd1e98 WHIRLPOOL 2437909ab2f602e7657cc4ad5f15650a60c702a668696c5584e5c9bed137f39b627eecb2987130a6f5d6c5d0661cee2bb2c52eb4ebabd7dd7b35fd0259be744e
 MISC metadata.xml 683 SHA256 6eefdd6ad85a2b0c933271e1df6badaf02a90ce36024fb846e6d139a94eced57 SHA512 363fdfda89ba17abb084a05c874ec46e0634e4a7d482ae7e9fb06c867c032f74084886f07e908ecd9212f7cd9393cb80057a70c38bbcf245d784d928551fd653 WHIRLPOOL 4ffff06f14938edbb423b73ad499b9d0f5d4f2ebb023f6cd9638b7b192da9258717da13c5beff8b20bede2ed375d8252b42fffd7a7aa4bf21eecb84fcdc92698
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJT0kT4XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJT1o+bXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzMDlCNDQ4NjEyNDI4NjA5REVEMDI3MzIy
-MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAgCbwQAIUDh4WvL53AZJxAaIz0zidL
-X9vQO2SIJ7Tpo5dPTeHQb7qXoc6fqxOUhpQ6HZXWPuJzQSoNgeHWehmeKV13MYjW
-EMNSkfUNB+OZ00ZP4ZB56FZ2P+pf8gdPVHH+fk0UfagNm2oPFmdx2iH/DL2+YTAd
-Nz7JmzUyVaTeK9CB09sdelv65pgf9X15OhFH9YquM5hXF5I3SRv/89n/encU0eLo
-PiXmEcs7joiPIhr1EBuWiRN0EHvOVSlaMaZUzM6S/dDB86OOXKufQetmkje9rmBK
-v+gyeU63wNwHhxlJ7q/rV3B28rDaYpXKonQoAOKp/jJQnAS3LQYQHpT0z0MwSivM
-CU6szGIB/15UwvVrDISHH7HsZGgvY+DHunqePMaCO+UfB9JnK5y/xLTOLeOWM1Gw
-trxKHMb79wB9VBUzLYQNabNRZYMphhiRUgHJ0n5Ct+D1Zi6pL/J9KwlnVHyvqkax
-2Ot4iGzOCjsMyN2eofQeFehaWOFrjbPkf/MqDh/9+dSNxuubRj13Ue3ahk7CD2xn
-YTuHvznAbJJVRU7Ez3XVKBtizbvWjQ24tR7bkrBrx7nGWxz3AZmXF4KctLmxUwBz
-oQ6N/ofLFCSCSgOVAEccFdeZsiz0lJmbazWuCLhRo54QE22CCOrCuCDLrrOeLlxu
-kzISGAH1M1y42zNf3JRK
-=zVIW
+MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAgAdcP/ArjGWSGL/dn21Um5GN4qjlq
+fTtFkygu1eIAsh4lscdCngvSdkZR0OXTvi7puOs8jmhQmDcTNpi/S1v6lpf5XBbK
+PCgoPzn8EVzNv2sprMIY/98dLrecYqFX165p/3zVf2fIQpdBm7ezFp0KCgscCfUf
++1VDdGckcPICGlTqSWe3fURcl8csZU/yJsfdcNbXc6f2AiFGFzLE/Pwb+q7/3jKO
+YfNgyLzu/ZilXNvsuC+jvjWTgsALnXAyUWOO+SiNJ6v3gjbq44yExsDEaG6mY6CY
+I8E5GlknTlv19iD3GgSKWLlKY/kfvZLJZsN6//BpVoA9kL9KUB+ejUyWPhfHlUZE
+71H/YsY7OliBk3CjqfW8JfG+iyhQT/+hmLaiRKPN9JLWvYNEwW326klntg5+C+ml
+5H4nHV6XEIqYK/96vHynNRjgIdeuVGqsfyAE/CLGJg6y5N0DEV4didh3Siipew8A
+7Te3B9YLhHXIEZSmyqmit2vG6MwgQ9VMUei0zBQuEVHfIDr6WUO+dZHHPBlJk9q7
+XFyB4sMT/VAWqQBMfSOCiRJNc1WFY5I2X8bXa7FqVBSJSaZ6iFv9rV5LUL2R3GuB
+a/ELB5xwbw7hGlhihy6Nfnu4idACTG4+SWXNyynwaY/WK0MDvi+psoOlh95gAZ1P
+I22a+dH0/HtJpVPE9VXF
+=7KzQ
 -----END PGP SIGNATURE-----
