@@ -1,6 +1,11 @@
 # ChangeLog for games-sports/dustrac
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-sports/dustrac/ChangeLog,v 1.3 2014/07/25 11:52:24 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-sports/dustrac/ChangeLog,v 1.4 2014/07/28 17:59:51 hasufell Exp $
+
+*dustrac-1.7.2 (28 Jul 2014)
+
+  28 Jul 2014; Julian Ospald <hasufell@gentoo.org> +dustrac-1.7.2.ebuild:
+  version bump
 
 *dustrac-1.7.1 (25 Jul 2014)
 
